<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme"
    tools:context="com.learnshare.coats.screens.MainActivity">

    <Button
        android:id="@+id/btnTakePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="Take photo"
        android:textColor="@color/text" />

    <EditText
        android:textColor="@color/text"
        android:id="@+id/etPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnTakePhoto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:hint="@string/phone_number"
        android:inputType="number" />

    <EditText
        android:textColor="@color/text"
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPhoneNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />


    <EditText
        android:textColor="@color/text"
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:hint="@string/name"
        android:inputType="text" />

    <Button
        android:textColor="@color/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etName"
        android:id="@+id/btnSubmit"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/submit"/>

</RelativeLayout>
